[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tts_webui_extension.mars5"
version = "0.0.3"
description = "MARS5: A novel speech model for insane prosody"
authors = [
    {name = "rsxdalv"}
]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mars5 @ git+https://github.com/rsxdalv/mars5-tts@master",
    "numpy==1.26.4",
]

[project.urls]
Homepage = "https://github.com/rsxdalv/tts_webui_extension.mars5"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
# This will find all namespace packages automatically
namespaces = true
